syntax = "proto3";

package common;

option optimize_for = SPEED;

message Status {
  enum Code {
    OK = 0;
  }
  Code code = 1;
  string message = 2;
}

message HostAddress {
  string host = 1;
  int32 port = 2;
}

// Encode which host machine an actor resides.
message ActorInfo {
  uint32 actor_id = 1;
  HostAddress host = 2;
}

enum WorkerType {
  FRONTEND = 0;
  COMPUTE_NODE = 1;
  RISE_CTL = 2;
  COMPACTOR = 3;

  GENERIC = 100;
}

message ParallelUnit {
  uint32 id = 1;
  uint32 worker_node_id = 2;
}

message WorkerNode {
  enum State {
    STARTING = 0;
    RUNNING = 1;
  }
  uint32 id = 1;
  WorkerType type = 2;
  HostAddress host = 3;
  State state = 4;
  // a mapping from logical key to parallel unit, with logical key as the index of array
  repeated ParallelUnit parallel_units = 5;
}

message Buffer {
  enum CompressionType {
    INVALID = 0;
    NONE = 1;
  }
  CompressionType compression = 1;
  bytes body = 2;
}

// Vnode mapping for stream fragments / relational state tables. Stores mapping from virtual node to parallel unit id.
message ParallelUnitMapping {
  uint32 table_id = 1;
  repeated uint64 original_indices = 2;
  repeated uint32 data = 3;
}

// Bitmap that records whether vnodes are present.
message VNodeBitmap {
  uint32 table_id = 1;
  Buffer bitmap = 2;
}
